--- a/styles.css
+++ b/styles.css
@@ -210,6 +210,7 @@ nav ul li:nth-child(2){
     gap: 40px;
     background: #121111d9;
     width: 100%;
+    
   }
 
   .container-results {
@@ -218,6 +219,7 @@ nav ul li:nth-child(2){
     display: flex;
     flex-direction: column;
     width: 400px;
+    
   }
 
   .container-results ._image-container{
@@ -228,13 +230,17 @@ nav ul li:nth-child(2){
   }
 
   .container img {
+    aspect-ratio: 4/4;
     width: 60%;
     box-shadow: -10px 12px 12px -7px rgba(0,0,0,0.44);
 -webkit-box-shadow: -10px 12px 12px -7px rgba(0,0,0,0.44);
 -moz-box-shadow: -10px 12px 12px -7px rgba(0,0,0,0.44);
+transition: 2s cubic-bezier(0.075, 0.82, 0.165, 1)
+  }
 
-    
-    
+  .container img:hover {
+    border-radius: 100%;
+    transform: scale(120%);
   }
 
 ._results-product-header{
