--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,13 +1,19 @@
 @media screen and (orientation: landscape) and (min-width: 1200px) {
     div#index-content{
-        height: 80vh; 
+        
     }
 }
 
-@media screen and (orientation: portrait) {
+@media screen and (orientation: portrait) and (max-width: 800px){
     div#index-content{
         height: 40vh; 
     }
+
+    #container {
+        grid-template-columns: repeat(1, 1fr);
+        
+        
+      }
 }
 
 
