--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,12 @@
 @import url(./css/events.css);
 
 :root{
-    /*agregar variables
-        rgb(220, 219, 223) blanco
-
-    */
+    font-size: 16px;
+    --price-font: 1.2rem;
+    --description-font: 1rem;
+    --title-font: 1.5rem;
+    --nav-font: 0.9rem;
+    --buy-font: 1.2rem;
 }
 
     
@@ -73,7 +75,6 @@ nav img{
     width: 10%;
     border-radius: 100%;
     
-
 }
 
 
@@ -90,85 +91,25 @@ ul li{
     cursor: pointer;
     font-family: comf-l;
     font-weight: 900;
-    font-size: 1.1rem;
+    font-size: var(--nav-font);
     margin: 0 10px;
     display: inline-block;
     color: rgb(250, 248, 251);
 }
 
 div#index-content{
-    position: relative;
-    display: flex;
-    flex-direction: row;
     margin: 10px auto;
     width: 80%;
-    height: 40vh;
-    max-height: 690px;
-    overflow: hidden;
+    height: calc(100vh - 100px);
+    background-color: bisque;
     
     
 }
 
-div.content_box-animation-slide{
-    position: absolute;
-    display: flex;
-    flex-direction: row;
-    width: 102%;
-    height: 100%;
-    animation-fill-mode: forwards;  
-    transition: 1s;
-}
 
-div.content_box-animation-slide:nth-child(1){
-    transform: translateX(0%);
-    
-}
-div.content_box-animation-slide:nth-child(2){
-    transform: translateX(100%); 
-}
 
-.slide-hidden{
-    animation: sliderXa 1s ease-in;
-}
-.slide-show{
-    animation: sliderXb 1s ease-in;
-}
 
-.content_image{
-    overflow: hidden;
-    cursor: pointer;
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
 
-.image_info{
-align-items: center;
-background-color: rgba(2, 1, 1, 0.678);
-color: aliceblue;
-display: flex;
-flex-direction: column;
-font-family: roboto-l;
-font-size: .9rem;
-height: 100%;
-justify-content: center;
-position: absolute;
-text-align: center;
-transition: 0.2s;
-width: 100%;
-}
-
-.image_info p{ 
-    padding: 10px
-}
-    
-.content_image img{
- aspect-ratio: 2/3;
- object-fit: cover;
- width: 100%;
- height: 100%;
- transition: 0.5s;
-}
 
 .index-info-search{
     margin: 20px auto;
@@ -280,7 +221,6 @@ nav ul li:nth-child(2){
     background-color: rgb(228, 223, 220);
     display: flex;
     flex-direction: column;
-    width: 400px;
     
   }
 
@@ -302,7 +242,7 @@ nav ul li:nth-child(2){
     width: 30px;
     height: 30px;
     position: absolute;
-    right: 80px;
+    right: 20%;
     top: 16px;
     cursor: pointer;
     transition: 0.2s;
@@ -337,13 +277,15 @@ nav ul li:nth-child(2){
     margin: 0;
     background-color: #f27f79;
     text-align: center;
+    font-size: var(--title-font);
     padding: 8px;
 }
 
 ._results-product-header p{
     text-align: left;
     font-family: roboto-l;
-    padding: 0px 30px 0px 30px;
+    font-size: var(--description-font);
+    padding: 0px 0px 0px 0px;
 }
 
 .box-help--flex-row{
@@ -358,10 +300,9 @@ nav ul li:nth-child(2){
     background-color: #badac4;
     outline-style: none;
     border: none;
-    font-size: 24px;  
-    border-radius: 30px;
+    font-size: var(--buy-font);  
+    border-radius: 0px;
     padding: 13px;
-    font-size: 1.2rem;
     font-weight: bold;
     color: #ff5900fc;
     cursor: pointer;
@@ -371,7 +312,7 @@ nav ul li:nth-child(2){
 .box-help--flex-row p:nth-child(1){
     color: black;
     font-weight: bold;
-    font-size: 1.2rem;
+    font-size: var(--price-font);
 }
 
 
