--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 :root{
+    
     font-size: 16px;
     --price-font: 1.2rem;
     --description-font: 1rem;
@@ -19,6 +20,12 @@
   margin: 0px;
   padding: 0px;
 }
+
+::selection {
+    background-color: transparent; /* Establece el color de fondo de la selección como transparente */
+    color: inherit; /* Hereda el color de texto de su elemento padre */
+  }
+  
 
 div#modal-favorites{
     border-radius: 40px;
